--- a/src/components/container/style.module.scss
+++ b/src/components/container/style.module.scss
@@ -1,5 +1,8 @@
 .container {
+  position: relative;
   width: 100%;
+  height: auto;
+  background-color: green;
   padding: 0 8vw;
   @media (max-width: 500px) {
     padding: 0 4vw;
