--- a/src/components/layout/components/navbar/style.module.scss
+++ b/src/components/layout/components/navbar/style.module.scss
@@ -1,12 +1,15 @@
 header {
+  display: block;
   position: absolute;
   top: 0;
   left: 0;
   z-index: 5;
   background-color: inherit;
   width: 100%;
+  height: fit-content;
 }
 nav {
+  display: block;
   width: 100%;
   padding: 1.5rem 0;
   background-color: red;
