--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -1,6 +1,8 @@
 @import url(https://fonts.googleapis.com/css?family=Roboto:100,100italic,300,300italic,regular,italic,500,500italic,700,700italic,900,900italic);
+@import url(https://fonts.googleapis.com/css?family=Lato:100,100italic,300,300italic,regular,italic,700,700italic,900,900italic);
 
 $mainFont: "Roboto", sans-serif;
-$primaryColor: "#D52047";
-$secondaryColor: "#EE3D1B";
-$backgroundGray: "#FAFAFA";
+$secondaryFont: "Lato", sans-serif;
+$primaryColor: #d52047;
+$secondaryColor: #ee3d1b;
+$backgroundGray: #fafafa;
