added Typography component in typography branch

--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -4,5 +4,5 @@
 $mainFont: "Roboto", sans-serif;
 $secondaryFont: "Lato", sans-serif;
 $primaryColor: #d52047;
-$secondaryColor: #ee3d1b;
+$secondaryColor: hsl(10, 86%, 52%);
 $backgroundGray: #fafafa;
