--- a/src/components/layout/components/navbar/style.module.scss
+++ b/src/components/layout/components/navbar/style.module.scss
@@ -1,6 +1,7 @@
 @import "../../../../styles/_variables";
 
 header {
+  position: relative;
   display: block;
   position: fixed;
   top: 0;
@@ -21,6 +22,7 @@ nav {
   width: 100%;
   display: flex;
   justify-content: space-between;
+  color: white;
   .logo {
     display: flex;
     align-items: center;
@@ -30,13 +32,73 @@ nav {
 .links {
   display: flex;
   gap: 2rem;
+  @media (max-width: 672px) {
+    position: fixed;
+    top: 0;
+    right: -100%;
+    background-color: $primaryColor;
+    height: 100vh;
+    width: 60vw;
+    z-index: 10;
+    transition-duration: 0.4s;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  #check:checked ~ & {
+    right: 0;
+  }
 }
 .link__item {
   transition-duration: 0.4s;
+  display: flex;
+  align-items: center;
   a {
     &:hover {
-      color: white;
       text-decoration: underline;
+    }
+  }
+}
+#check,
+.open,
+.close {
+  display: none;
+  cursor: pointer;
+}
+.open {
+  @media (max-width: 672px) {
+    display: flex;
+    align-items: center;
+  }
+  #check:checked ~ & {
+    display: none;
+  }
+}
+.close {
+  @media (max-width: 672px) {
+    position: absolute;
+    top: 3vh;
+    right: 4vw;
+    z-index: 11;
+  }
+  #check:checked ~ & {
+    display: flex;
+    align-items: center;
+  }
+}
+.btn-wrapper {
+  &--first {
+    display: block;
+  }
+  &--second {
+    display: none;
+  }
+  @media (max-width: 672px) {
+    &--first {
+      display: none;
+    }
+    &--second {
+      display: block !important;
     }
   }
 }
