--- a/src/components/layout/components/navbar/style.module.scss
+++ b/src/components/layout/components/navbar/style.module.scss
@@ -7,7 +7,7 @@ header {
   top: 0;
   left: 0;
   z-index: 5;
-  background-color: $primaryColor;
+  background-color: inherit;
   width: 100%;
   height: fit-content;
   padding: 3vh 8vw;
