added Showcase component to showcase branch

--- a/src/components/button/style.module.scss
+++ b/src/components/button/style.module.scss
@@ -71,7 +71,7 @@
   &.btn-padding--md {
     padding: 0.5rem 2rem;
   }
-  &.btn-padding-lg {
-    padding: 0.8rem 3.5rem;
+  &.btn-padding--lg {
+    padding: 0.8rem 2rem;
   }
 }
