--- a/src/components/layout/components/navbar/style.module.scss
+++ b/src/components/layout/components/navbar/style.module.scss
@@ -36,7 +36,7 @@ nav {
     position: fixed;
     top: 0;
     right: -100%;
-    background-color: $primaryColor;
+    background-color: $secondaryColor;
     height: 100vh;
     width: 60vw;
     z-index: 10;
