added margin top property to Typography component in typography branch

--- a/src/components/typography/style.module.scss
+++ b/src/components/typography/style.module.scss
@@ -30,6 +30,18 @@
   &.text-size--lg {
     font-size: 1.5rem;
   }
+  &.text-size--xl {
+    font-size: 2rem;
+  }
+  &.text-size--2xl {
+    font-size: 2.5rem;
+  }
+  &.text-size--3xl {
+    font-size: 3rem;
+  }
+  &.text-size--4xl {
+    font-size: 3.5rem;
+  }
 
   &.text--default {
     font-weight: 400;
