--- a/src/components/typography/style.module.scss
+++ b/src/components/typography/style.module.scss
@@ -1,6 +1,8 @@
 @import "../../styles/variables";
 
 .text {
+  display: block;
+
   &.text-color--black {
     color: black;
   }
@@ -47,7 +49,7 @@
     font-weight: 400;
   }
   &.text--semibold {
-    font-weight: 550;
+    font-weight: 500;
   }
   &.text--bold {
     font-weight: 700;
