--- a/src/styles/global.scss
+++ b/src/styles/global.scss
@@ -7,6 +7,10 @@
 a {
   color: inherit;
   text-decoration: none;
+  transition-duration: 0.4s;
+}
+a:hover {
+  text-decoration: underline;
 }
 
 li {
