--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -1,6 +1,9 @@
 @import "../../styles/variables";
 
 .home {
+  display: block;
+  min-height: fit-content;
+
   &.home-background--primary {
     background-color: $primaryColor;
   }
