--- a/src/styles/_variables.scss
+++ b/src/styles/_variables.scss
@@ -6,3 +6,4 @@ $secondaryFont: "Lato", sans-serif;
 $primaryColor: #d52047;
 $secondaryColor: hsl(10, 86%, 52%);
 $backgroundGray: #fafafa;
+$colorGray: #10101014;
