added economy page in dev branch

--- a/src/pages/home/style.module.scss
+++ b/src/pages/home/style.module.scss
@@ -13,6 +13,9 @@
   &.home-background--tertiary {
     background-color: $backgroundGray;
   }
+  &.home-background--fourth {
+    background-color: #ed4c5c;
+  }
 
   &.home-padding--sm {
     padding: 2rem 0;
