added Input component in input branch

--- a/src/components/grid/style.module.scss
+++ b/src/components/grid/style.module.scss
@@ -14,6 +14,15 @@
       text-align: center;
     }
   }
+  &.grid-col--two-unreverse {
+    grid-template-columns: repeat(2, 1fr);
+    gap: 5vh 7vw;
+    justify-content: space-between;
+    @media (max-width: 1120px) {
+      grid-template-columns: 1fr;
+      text-align: center;
+    }
+  }
   &.grid-col--three {
     grid-template-columns: repeat(3, 1fr);
     gap: 5vh 1.5vw;
